// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`default secret behavior 1`] = `
"{
  \\"output\\": {
    \\"WING_TEST_RUNNER_FUNCTION_ARNS\\": {
      \\"value\\": \\"[]\\"
    },
    \\"root_Secret_SecretArn_0B7388CD\\": {
      \\"value\\": \\"\${aws_secretsmanager_secret.root_Secret_E5F0F150.arn}\\"
    }
  },
  \\"resource\\": {
    \\"aws_secretsmanager_secret\\": {
      \\"root_Secret_E5F0F150\\": {
        \\"name\\": \\"Secret-c8e3aab7\\"
      }
    }
  }
}"
`;

exports[`default secret behavior 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "Secret": {
                "attributes": {
                  "wing:resource:connections": [],
                },
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.15.2",
                    },
                    "id": "Default",
                    "path": "root/Default/Secret/Default",
                  },
                  "SecretArn": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformOutput",
                      "version": "0.15.2",
                    },
                    "id": "SecretArn",
                    "path": "root/Default/Secret/SecretArn",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A cloud secret",
                  "title": "Secret",
                },
                "id": "Secret",
                "path": "root/Default/Secret",
              },
              "aws": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.15.2",
                },
                "id": "aws",
                "path": "root/Default/aws",
              },
              "cloud.TestRunner": {
                "attributes": {
                  "wing:resource:connections": [],
                },
                "children": {
                  "TestFunctionArns": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformOutput",
                      "version": "0.15.2",
                    },
                    "id": "TestFunctionArns",
                    "path": "root/Default/cloud.TestRunner/TestFunctionArns",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.1.245",
                },
                "display": {
                  "description": "A suite of APIs for running tests and collecting results.",
                  "hidden": true,
                  "title": "TestRunner",
                },
                "id": "cloud.TestRunner",
                "path": "root/Default/cloud.TestRunner",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.1.245",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.15.2",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.15.2",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.15.2",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`secret with a name 1`] = `
"{
  \\"data\\": {
    \\"aws_secretsmanager_secret\\": {
      \\"root_Secret_E5F0F150\\": {
        \\"name\\": \\"my-secret\\"
      }
    }
  },
  \\"output\\": {
    \\"WING_TEST_RUNNER_FUNCTION_ARNS\\": {
      \\"value\\": \\"[]\\"
    }
  }
}"
`;
